--- a/StarterApp/client/views/application/layout.html
+++ b/StarterApp/client/views/application/layout.html
@@ -1,11 +1,7 @@
 <template name="layout">
     <div class="site-wrapper">
         <div class="site-wrapper-inner">
-            <div class="cover-container">
-                {{>header}}
-                {{yield}}
-                {{>footer}}
-            </div>
+            <div class="cover-container">{{>header}} {{yield}} {{>footer}}</div>
         </div>
     </div>
 </template>
