--- a/StarterApp/client/views/home/home.html
+++ b/StarterApp/client/views/home/home.html
@@ -1,11 +1,17 @@
 <template name="home">
-
     <div class="inner cover">
         <h1 class="cover-heading">{{coverHeading}}</h1>
-        <p class="lead">{{{ bodyText}}}</p>
+        <p class="lead">{{{ bodyText_intro}}} {{{ bodyText_description}}}</p>
         <p class="lead">
-            <a href="#" class="btn btn-lg btn-default">{{learnMore}}</a>
+            <a class="btn btn-lg btn-default open-popup-link" href="#test-popup">{{solution_iterative}}</a>
+            
+            <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+            <div id="test-popup" class="white-popup mfp-hide">
+                Popup content
+            </div>
+            
+            <a href="#" class="btn btn-lg btn-default">{{solution_parallele}}</a>
+            </ul>
         </p>
     </div>
- 
 </template>
