--- a/StarterApp/client/views/includes/header.html
+++ b/StarterApp/client/views/includes/header.html
@@ -4,6 +4,7 @@
             <h3 class="masthead-brand">{{{ brand }}}</h3>
             <ul class="nav masthead-nav">
                 <li class="active"><a href="{{pathFor 'home'}}">{{home}}</a></li>
+                <li><a href="{{pathFor 'description'}}">{{description}}</a></li>
                 <li><a href="{{pathFor 'simulation'}}">{{simulation}}</a></li>
                 <li><a href="{{pathFor 'about'}}">{{about}}</a></li>
             </ul>
