--- a/App/client/views/simulation/simulation.html
+++ b/App/client/views/simulation/simulation.html
@@ -1,4 +1,4 @@
-<template name="layout">
+<template name="simulation">
     <div class="site-wrapper">
         <div class="site-wrapper-inner">
             <div class="cover-container">{{>header}} {{yield}} {{>footer}}</div>
