--- a/App/client/views/home/home.html
+++ b/App/client/views/home/home.html
@@ -2,16 +2,15 @@
     <div class="inner cover">
         <h1 class="cover-heading">{{coverHeading}}</h1>
         <p class="lead">{{{ bodyText_intro}}} {{{ bodyText_description}}}</p>
-        <p class="lead">
-            <a class="btn btn-lg btn-default open-popup-link" href="#test-popup">{{solution_iterative}}</a>
+        <p class="popups">
+            {{{ btn_solIt }}}
             
             <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
             <div id="test-popup" class="white-popup mfp-hide">
                 Popup content
             </div>
             
-            <a href="#" class="btn btn-lg btn-default">{{solution_parallele}}</a>
-            </ul>
+            <!-- <a href="#" class="btn btn-lg btn-default">{{solution_parallele}}</a> -->
         </p>
     </div>
 </template>
