--- a/App/client/views/layout.html
+++ b/App/client/views/layout.html
@@ -15,7 +15,7 @@
         <div class="site-wrapper-inner">
             <div class="cover-container">
                 {{>header}}
-                {{yield}}
+                {{>yield}}
                 {{>footer}}
             </div>
         </div>
