implémentation de l'algo simple (séquentiel) touches :  entrer : effacer  r : remplir aléatoirement  espace : play/pause
clic : faire revivre une cellule

--- a/App/client/views/simulation/simulation.html
+++ b/App/client/views/simulation/simulation.html
@@ -1,3 +1,10 @@
 <template name="simulation">
 
+    <div>
+        <span>Résolution : </span>
+        <input id="resolution" type="text"/>
+        <button id="changeRes">Changer</button>
+    </div>
+    <br/>
+    <div id="gol-canvas"></div>
 </template>
