--- a/App/client/views/home/home.html
+++ b/App/client/views/home/home.html
@@ -2,15 +2,17 @@
     <div class="inner cover">
         <h1 class="cover-heading">{{coverHeading}}</h1>
         <p class="lead">{{{ bodyText_intro}}} {{{ bodyText_description}}}</p>
-        <p class="popups">
-            {{{ btn_solIt }}}
+        <!--
+<p class="popups">
+
+{{{ btn_solIt }}}
+
+dialog itself, mfp-hide class is required to make dialog hidden
+<div id="test-popup" class="white-popup mfp-hide">
+    Popup content
+</div>
             
-            <!-- dialog itself, mfp-hide class is required to make dialog hidden -->
-            <div id="test-popup" class="white-popup mfp-hide">
-                Popup content
-            </div>
-            
-            <!-- <a href="#" class="btn btn-lg btn-default">{{solution_parallele}}</a> -->
-        </p>
+            <a href="#" class="btn btn-lg btn-default">{{solution_parallele}}</a>
+        </p> -->
     </div>
 </template>
